# Trader-ai

./: PROJECT.md  README.md  analytics.py  app.py  binance.py  coingecko.py  config.json  portfolio_analytics.py  portfolio_io.py  pyproject.toml  requirements.txt  sample_data.py  trader_assistant.py
.streamlit/: config.toml
components/: badges.py  cards.py  charts.py  footer.py  header.py  navigation.py  theme.py  ui.py
pages/: assistant.py  bots.py  calculator.py  home.py  markets.py  news.py  opportunities.py  portfolio.py  trader_ai.py
services/: binance_service.py  coingecko_service.py  market_service.py  news_service.py  portfolio_service.py
src/trader_ai/: __init__.py  analytics.py  sample_data.py
utils/: cache.py  constants.py  helpers.py
