[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trader-ai"
version = "0.1"
description = "CoinGecko-only Streamlit crypto portfolio dashboard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.36.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
]

[tool.setuptools]
py-modules = ["analytics", "coingecko", "sample_data"]
